Add BaseUserActions class and LoginTests sample

--- a/SoAAutomationFramework/SoAAutomationFramework/appsettings.json
+++ b/SoAAutomationFramework/SoAAutomationFramework/appsettings.json
@@ -8,12 +8,12 @@
 
   "env": {
     "default": {
-      "host": "http://localhost",
+      "host": "http://localhost:8080",
       "pages_path": {
         "home": "/",
         "login": "/login"
       },
-      "api_url": "http://localhost/api"
+      "api_url": "http://localhost:5000"
     }
   }
 }
