Fix appsettings.json. Add LoginPage and Admin login test

--- a/SoAAutomationFramework/SoAAutomationFramework/appsettings.json
+++ b/SoAAutomationFramework/SoAAutomationFramework/appsettings.json
@@ -5,13 +5,20 @@
     "implicit_wait": 5000,
     "explicit_wait": 5000
   },
-
   "env": {
     "default": {
       "host": "http://localhost:8080",
       "pages_path": {
         "home": "/",
-        "login": "/login"
+        "login": "/login.php"
+      },
+      "api_url": "http://localhost:5000"
+    },
+    "dev": {
+      "host": "http://127.0.0.1:8080",
+      "pages_path": {
+        "home": "/",
+        "login": "/login.php"
       },
       "api_url": "http://localhost:5000"
     }
