--- a/SeleniumTestFramework/SeleniumTestFramework/SeleniumTestFramework.csproj
+++ b/SeleniumTestFramework/SeleniumTestFramework/SeleniumTestFramework.csproj
@@ -26,6 +26,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NUnit3TestAdapter" Version="6.1.0" />
+    <PackageReference Include="Reqnroll" Version="3.3.2" />
+    <PackageReference Include="Reqnroll.NUnit" Version="3.3.2" />
     <PackageReference Include="Selenium.Support" Version="4.40.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.40.0" />
     <PackageReference Include="WebDriverManager" Version="2.17.6" />
@@ -42,6 +44,10 @@
     <None Update="appsettings.staging.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\" />
   </ItemGroup>
 
 </Project>
