--- a/SeleniumTestFramework/SeleniumTestFramework/SeleniumTestFramework.csproj
+++ b/SeleniumTestFramework/SeleniumTestFramework/SeleniumTestFramework.csproj
@@ -27,6 +27,7 @@
     </PackageReference>
     <PackageReference Include="NUnit3TestAdapter" Version="6.1.0" />
     <PackageReference Include="Reqnroll" Version="3.3.2" />
+    <PackageReference Include="Reqnroll.Microsoft.Extensions.DependencyInjection" Version="3.3.2" />
     <PackageReference Include="Reqnroll.NUnit" Version="3.3.2" />
     <PackageReference Include="Selenium.Support" Version="4.40.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.40.0" />
