--- a/SeleniumTestFramework/SeleniumTestFramework/SeleniumTestFramework.csproj
+++ b/SeleniumTestFramework/SeleniumTestFramework/SeleniumTestFramework.csproj
@@ -20,15 +20,16 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+    <PackageReference Include="MySqlConnector" Version="2.5.0" />
     <PackageReference Include="NUnit" Version="4.4.0" />
     <PackageReference Include="NUnit.Analyzers" Version="4.11.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NUnit3TestAdapter" Version="6.1.0" />
-    <PackageReference Include="Reqnroll" Version="3.3.2" />
-    <PackageReference Include="Reqnroll.Microsoft.Extensions.DependencyInjection" Version="3.3.2" />
-    <PackageReference Include="Reqnroll.NUnit" Version="3.3.2" />
+    <PackageReference Include="Reqnroll" Version="3.3.3" />
+    <PackageReference Include="Reqnroll.Microsoft.Extensions.DependencyInjection" Version="3.3.3" />
+    <PackageReference Include="Reqnroll.NUnit" Version="3.3.3" />
     <PackageReference Include="Selenium.Support" Version="4.40.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.40.0" />
     <PackageReference Include="WebDriverManager" Version="2.17.6" />
