Configure project to work with MySql database

--- a/SeleniumTestFramework/SeleniumTestFramework/appsettings.json
+++ b/SeleniumTestFramework/SeleniumTestFramework/appsettings.json
@@ -3,6 +3,7 @@
     "BaseUrl": "http://localhost:8080/",
     "Email": "admin@automation.com",
     "Password": "pass123",
-    "Username": "Admin Automation"
+    "Username": "Admin Automation",
+    "ConnectionString": "Server=localhost;Port=3306;Database=db;User Id=root;Password=pass;"
   }
 }
