--- a/SeleniumTestFramework/SeleniumTestFramework.ApiTests/SeleniumTestFramework.ApiTests.csproj
+++ b/SeleniumTestFramework/SeleniumTestFramework.ApiTests/SeleniumTestFramework.ApiTests.csproj
@@ -16,8 +16,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="FluentAssertions" Version="8.8.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.3" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.3" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.3" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.3" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageReference Include="NUnit" Version="4.4.0" />
     <PackageReference Include="NUnit.Analyzers" Version="4.11.2">
